--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,7 +6,11 @@
     "scripts": {
         "build": "turbo run build",
         "dev": "bun run ./src/main.ts",
-        "check-types": "turbo run check-types"
+        "check-types": "turbo run check-types",
+        "studio": "bun drizzle-kit studio",
+        "push": "bun drizzle-kit push",
+        "migrate": "bun drizzle-kit migrate",
+        "generate": "bun drizzle-kit generate"
     },
     "devDependencies": {
         "@types/pg": "^8.15.4",
