--- a/package.json
+++ b/package.json
@@ -1,33 +1,26 @@
 {
-  "name": "armaz",
-  "private": true,
-  "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
-    "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
-  },
-  "devDependencies": {
-    "@types/pg": "^8.15.4",
-    "drizzle-kit": "^0.31.1",
-    "prettier": "^3.5.3",
-    "turbo": "^2.5.4",
-    "typescript": "5.8.2"
-  },
-  "engines": {
-    "node": ">=18"
-  },
-  "packageManager": "bun@1.2.14",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
-  "dependencies": {
-    "apollo-server-express": "^3.13.0",
-    "drizzle-orm": "^0.44.2",
-    "express": "^5.1.0",
-    "graphql": "^16.11.0",
-    "pg": "^8.16.0"
-  }
+    "name": "armaz",
+    "private": true,
+    "scripts": {
+        "build": "turbo run build",
+        "dev": "turbo run dev",
+        "lint": "turbo run lint",
+        "studio": "turbo run studio",
+        "push": "bun drizzle-kit push",
+        "migrate": "bun drizzle-kit migrate",
+        "generate": "bun drizzle-kit generate",
+        "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+        "check-types": "turbo run check-types"
+    },
+    "devDependencies": {
+        "turbo": "^2.5.4"
+    },
+    "engines": {
+        "node": ">=18"
+    },
+    "packageManager": "bun@1.2.14",
+    "workspaces": [
+        "apps/*",
+        "packages/*"
+    ]
 }
