--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -10,7 +10,8 @@
         "studio": "bun drizzle-kit studio",
         "push": "bun drizzle-kit push",
         "migrate": "bun drizzle-kit migrate",
-        "generate": "bun drizzle-kit generate"
+        "generate": "bun drizzle-kit generate",
+        "seed": "bun run ./src/db/seed.ts"
     },
     "devDependencies": {
         "@types/pg": "^8.15.4",
@@ -21,7 +22,9 @@
     },
     "dependencies": {
         "@as-integrations/express5": "^1.1.0",
+        "@types/bcrypt": "^5.0.2",
         "apollo-server-express": "^3.13.0",
+        "bcrypt": "^6.0.0",
         "drizzle-orm": "^0.44.2",
         "express": "^5.1.0",
         "graphql": "^16.11.0",
